Bug fixed : Responsive Menu Bar not aligning properly on site view and user view

--- a/frontend/www/css/styles.css
+++ b/frontend/www/css/styles.css
@@ -11,8 +11,6 @@
 }*/
 
 body { 
-       height: 100%; 
-       width: 100%; margin:0 auto; 
        font-family:Arial, Helvetica, sans-serif; 
        font-size:12px; 
        color:#000000;
